# flujo

./: .gitignore  CLAUDE.md  LICENSE  README.md  flujo.sh  instalar.sh  pyproject.toml
Flujo.app/Contents/: Info.plist
Flujo.app/Contents/MacOS/: flujo
Flujo.app/Contents/_CodeSignature/: CodeDirectory
src/flujo/: __init__.py  __main__.py  app.py  audio.py  config.py  engine.py  formatter.py  history.py  hotkey.py  instancia.py  paster.py  polish.py  sounds.py  ventana.py
tests/: conftest.py  test_audio.py  test_config.py  test_e2e_transcribe.py  test_engine.py  test_formatter.py  test_history.py  test_hotkey.py  test_instancia.py  test_polish.py  test_ventana.py
